--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
         <div class="form-container">
             <iframe id="sendinblue-form" width="540" height="305" src="https://8c9f608f.sibforms.com/serve/MUIFALvNrnwn7Kcw3JMAiCQ4VGQXM2LogEhUSDEmeTX_DcmpHV2e4gpkKv3ekiDsH7Yw8hm_LPGN1sUGWGf9yTpDWxAk-TP6U3ACpkfOnynzK3jVGXs9K-bYPgDS-OAIFLziNruAb9aaz6lEOyVKsUTZso_vTzOifxxzNGcuOWNwmrPziYBM4E9jSlybvi8td9YcIZc07rYxDVB7" scrolling="auto" allowfullscreen></iframe>
         </div>
+        <button id="unlock-btn" style="display:block; margin: 20px auto 0; padding: 12px 30px; background: #b4c033; color: white; border: none; border-radius: 10px; cursor: pointer; font-size: 16px; font-weight: bold; box-shadow: 0 5px 15px rgba(180,192,51,0.3); transition: all 0.3s;">✅ J'ai rempli le formulaire - Débloquer la roue</button>
     </div>
 
     <!-- ROUE BLOQUÉE AU DÉBUT -->
@@ -248,7 +249,6 @@
         </div>
 
         <button id="spin">🎡 Lancer la roue</button>
-        <button id="unlock-btn" style="display:block; margin: 10px auto; padding: 10px 20px; background: #b4c033; color: white; border: none; border-radius: 8px; cursor: pointer; font-size: 14px;">✅ J'ai rempli le formulaire - Débloquer</button>
     </div>
 </div>
 
